update README.md vsCode 사용법

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div>Hello World!</div>
+    <div>Hello World!</div> 
     <div>Hello World!</div>
-    <div>Hello World!</div>
-    <div>Hello World!</div>
+    <span>Hello World!</span>
     <div>Hello World!</div>
     <div>Hello World!</div>
 </body>
