--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ko">
   <head>
-    
-  </head>
-
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">    
+    <script src="./js/main.js"></script>
+    <style>
+      div {
+        text-decoration: underline;
+      }
+    </style>
+  </head>  
   <body>
+    <div></div>
     
   </body>
 
