--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="./css/main.css">    
     <script src="./js/main.js"></script>
     <style>
