--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <title>Document</title>
     <!-- css 리셋 적용하기, 브라우저의 css속성이용하지말기 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">         
-    
+    <link rel="stylesheet" href="./css/main.css">
     <script src="./js/main.js"></script>    
   </head>  
   <body>
-    
-    <div>
+    <div id = "header">Header</div>
+    <nav id="nav">Navigation</nav>   
+    <div id="content">
       <h1>오늘의날씨</h1>      
       <img src="" alt="태풍">
       <!-- 초기화 링크를 이용할때와 비교하기 -->
+
       <ol>
         <li>사과</li>
         <li>딸기</li>
