--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <a href="https://naver.com" target="_blank">NAVER</a>
     <a href="https://google.com">GOOGLE</a>
+    <br>
+
+    동해물과 백두산이 마르고 닳도록 하느님이 보우하사 <span>우리나라</span> 만세
             
     </div>
     
