--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
         <td>C1</td>
       </tr>
     </table>
+    <br>
+
+    <a href="https://naver.com" target="_blank" title="네이버로 이동">NAVER</a>
+    <a href="https://google.com">GOOGLE</a>
+
+    <br>
+    <span class="span1">동해물과</span> 백두산이 마르고 <span id="idid">닳도록</span> 하느님이 보우하사 <span class="span1">우리나라</span> 만세
+
+    <br>
+    <div data-fruit-name="apple">사과</div>
+    <div data-fruit-name="banana">바나나</div>
+    <script>
+      const els = document.querySelectorAll('div');
+      els.forEach(el => {
+        console.log(el.dataset.fruitName);
+      })
+    </script>
 
             
     </div>
