--- a/css_study/index.html
+++ b/css_study/index.html
@@ -8,7 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="box"></div>
+  <div class="box" tabindex="-1"></div>
+  <input type="text" />
   
 </body>
 </html>
