update css 가상선택

--- a/css_study/index.html
+++ b/css_study/index.html
@@ -8,7 +8,11 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="box" tabindex="-1"></div>
+  <div class="box" tabindex="-1"> 
+    
+    hi
+    
+  </div>
   <input type="text" />
   
 </body>
