--- a/css_study/index.html
+++ b/css_study/index.html
@@ -11,9 +11,11 @@
   <div class="box" tabindex="-1"> 
     
     hi
-    
+
   </div>
   <input type="text" />
+  <input type="password">
+  <span data-fruit-name="apple">Apple</span>
   
 </body>
 </html>
