update css text-decolation~

--- a/css_study/css_property/index.html
+++ b/css_study/css_property/index.html
@@ -12,6 +12,6 @@
   <div class="parent">    
     <div class="child"></div>
   </div>
-  
+  <a href="https://google.com" target="_blank">Google</a>  
 </body>
 </html>
