update css 백그라운드 속성

--- a/css_study/css_property/index.html
+++ b/css_study/css_property/index.html
@@ -12,6 +12,8 @@
   <div class="parent">    
     <div class="child"></div>
   </div>
-  <a href="https://google.com" target="_blank">Google</a>  
+  <a href="https://google.com" target="_blank">Google</a>
+  
+  <div class="test1"></div>
 </body>
 </html>
