--- a/css_study/css_property/index.html
+++ b/css_study/css_property/index.html
@@ -5,15 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./main2.css">
   <title>Document</title>
 </head>
 <body>
-  <div class="parent">    
-    <div class="child"></div>
+  <div class="container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
   </div>
-  <a href="https://google.com" target="_blank">Google</a>
-  
-  <div class="test1"></div>
 </body>
 </html>
