--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>  
   <body>
     <div id = "header">Header</div>
-    <nav id="nav">Navigation</nav>   
+    <div id="nav">Navigation</div>   
     <div id="content">
       <h1>오늘의날씨</h1>      
       <img src="" alt="태풍">
