--- a/css_study/css_property/index.html
+++ b/css_study/css_property/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <link rel="stylesheet" href="./main2.css">
+  <link rel="stylesheet" href="./main3.css">
   <title>Document</title>
 </head>
 <body>
@@ -13,6 +13,8 @@
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
   </div>
 </body>
 </html>
