--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -20,15 +20,19 @@
   <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
   <meta property="twitter:url" content="https://starbucks.co.kr" />
 
-  <link rel="stylesheet" href="./favicon.png">
+  <link rel="icon" href="./favicon.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
   Hello world!
+  <span class="material-icons">
+    login
+  </span>
 </body>
 
 </html>
