--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -29,10 +29,15 @@
 </head>
 
 <body>
-  Hello world!
-  <span class="material-icons">
-    login
-  </span>
+  <!-- HEADER -->
+  <header>
+    <div class="inner">
+
+      <a href="/" class="logo">
+        <img src="./images/starbucks_logo.png" alt="STARBUCKS LOGO" />
+      </a>
+    </div>
+  </header>
 </body>
 
 </html>
