--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -26,6 +26,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="./css/main.css">
+  <script defer src="./js/main.js"></script>
 </head>
 
 <body>
@@ -53,11 +54,17 @@
         </ul>
         <div class="search">
           <input type="text" />
-          <div class="material-icons">            
-              search              
-          </div>
+          <div class="material-icons">search</div>
         </div>
       </div>
+      
+      <ul class="main-menu">
+        <li class="item">
+          <div class="item__name">COFFEE</div>
+          <div class="item__contents"></div>
+        </li>
+      </ul>
+
     </div>
   </header>
 </body>
