--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -61,7 +61,41 @@
       <ul class="main-menu">
         <li class="item">
           <div class="item__name">COFFEE</div>
-          <div class="item__contents"></div>
+          <div class="item__contents">
+            <div class="contents__menu"></div>
+            <div class="contents__texture"></div>
+          </div>
+        </li>
+        <li class="item">
+          <div class="item__name">MENU</div>
+          <div class="item__contents">
+            <div class="contents__menu"></div>
+            <div class="contents__texture"></div>
+          </div>
+        </li>
+        <li class="item">
+          <div class="item__name">STORE</div>
+          <div class="item__contents">
+
+          </div>
+        </li>
+        <li class="item">
+          <div class="item__name">COFFEE</div>
+          <div class="item__contents">
+
+          </div>
+        </li>
+        <li class="item">
+          <div class="item__name">COFFEE</div>
+          <div class="item__contents">
+
+          </div>
+        </li>
+        <li class="item">
+          <div class="item__name">COFFEE</div>
+          <div class="item__contents">
+
+          </div>
         </li>
       </ul>
 
