--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -26,6 +26,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="./css/main.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous"></script>
   <script defer src="./js/main.js"></script>
 </head>
 
@@ -356,7 +357,10 @@
           </div>
         </li>
       </ul>
-
+    </div>
+    <div class="badges">
+      <div class="badge"><img src="./images/badge1.jpg" alt="Badge"></div>
+      <div class="badge"><img src="./images/badge2.jpg" alt="Badge"></div>
     </div>
   </header>
 </body>
