--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -25,9 +25,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/main.css">
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 
@@ -395,7 +398,24 @@
       <div class="inner">
         <div class="inner__left">
           <h2>공지사항</h2>
-          <div class="swiper-container"></div>
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="javascipt:void(0)">크리스마스 & 연말연시 스타벅스 매장 영업시간</a>
+  
+              </div>
+              <div class="swiper-slide">
+                <a href="javascipt:void(0)">스타벅스 매장 영업시간</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascipt:void(0)">당첨자 & 연말연시 스타벅스 매장 영업시간</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascipt:void(0)">무야호 & 연말연시 스타벅스 매장 영업시간</a>
+              </div>
+            </div>
+            
+          </div>
           <a href="javascript:void(0)" class="notice-line__more">
             <div class="material-icons">add_circle</div>
           </a>
