update 화면이 줄어들때에도 가운데 정렬을 유지하는 방법

--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -423,10 +423,18 @@
         </div>
         <div class="inner__right">
           <h2>스타벅스 프로모션</h2>
-          <div class="material-icons"></div>
+          <div class="material-icons">upload</div>
         </div>
       </div>
     </div>
+    
+    <div class="promotion">
+      <div class="swiper-container">
+        text 
+        <div class="swiper-wrapper"></div>
+      </div>
+    </div>
+
   </section>
 </body>
 
