--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -430,9 +430,33 @@
     
     <div class="promotion">
       <div class="swiper-container">
-        text 
-        <div class="swiper-wrapper"></div>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide1.jpg" alt="2021 뉴이어, 스타벅스와 함께 현업에서는 꼭 작성하기 alt!" />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide2.jpg" alt="2021 뉴이어, 스타벅스와 함께 현업에서는 꼭 작성하기 alt!" />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide3.jpg" alt="2021 뉴이어, 스타벅스와 함께현업에서는 꼭 작성하기 alt!" />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide4.jpg" alt="2021 뉴이어, 스타벅스와 함께 현업에서는 꼭 작성하기 alt!" />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/promotion_slide5.jpg" alt="2021 뉴이어, 스타벅스와 함께 현업에서는 꼭 작성하기 alt!" />
+            <a href="javascript:void(0)" class="btn">자세히 보기</a>
+          </div>
+          
+        </div>         
       </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-prev"></div>
+      <div class="swiper-next"></div>
     </div>
 
   </section>
