--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -423,7 +423,9 @@
         </div>
         <div class="inner__right">
           <h2>스타벅스 프로모션</h2>
-          <div class="material-icons">upload</div>
+          <div class="toggle-promotion">
+            <div class="material-icons">upload</div>
+          </div>          
         </div>
       </div>
     </div>
@@ -463,6 +465,19 @@
       </div>
     </div>
 
+  </section>
+
+  <!-- REWARDS -->
+  <section class="rewards">    
+    <div class="bg-left"></div>
+    <div class="bg-right"></div>
+    <div class="inner">
+      <div class="btn-group">
+        <div class="btn btn--reverse sign-up">회원가입</div>
+        <div class="btn sign-in">로그인</div>
+        <div class="btn gift">e-Gift 선물하기</div>
+      </div>
+    </div>
   </section>
 </body>
 
