--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -32,7 +32,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-  <script defer src="./js/youtube.js"></script>
+  <!-- <script defer src="./js/youtube.js"></script> -->
   <script defer src="./js/main.js"></script>
 </head>
 
@@ -485,10 +485,14 @@
   <!-- YOUTUBE VIDEO -->
   <section class="youtube">
     <div class="youtube__area">
-
       <div id="player"></div>
     </div>
     <div class="youtube__cover"></div>
+    <div class="inner">
+      <img src="./images/floating1.png" alt="Icon1" class="floating floating1" />
+      <img src="./images/floating2.png" alt="Icon2" class="floating floating2" />
+      <img src="./images/floating3.png" alt="Icon3" class="floating floating3" />
+    </div>
   </section>
 </body>
 
