--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -19,7 +19,8 @@
   <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
   <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
   <meta property="twitter:url" content="https://starbucks.co.kr" />
-
+  
+  
   <link rel="icon" href="./favicon.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -28,10 +29,14 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/main.css">
   
+  <!-- lodash -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
+  
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous"></script>
+  
   <script defer src="./js/youtube.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
@@ -553,8 +558,33 @@
         </div>
         <div class="back">
           <img src="./images/reserve_store_medal_back.png" alt="" />
+          <a href="javascript:void(0)" class="btn">매장안내</a>
         </div>
       </div>
+
+    </div>
+  </section>
+
+
+  <!-- FIND THE STORE -->
+  <section class="find-store">
+    <div class="inner">
+
+      <img src="./images/find_store_texture1.png" alt="" class="texture1" />
+      <img src="./images/find_store_texture2.png" alt="" class="texture2" />
+      <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1" />
+      <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2" />
+
+
+      <div class="text-group">
+        <img src="./images/find_store_text1.png" alt="" class="title" />
+        <img src="./images/find_store_text2.png" alt="" class="description" />
+        <div class="more">
+          <a href="javascript:void(0)" class="btn">매장찾기</a>
+        </div>
+      </div>
+
+
 
     </div>
   </section>
