--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -31,8 +31,11 @@
   
   <!-- lodash -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  
+  <!-- GSAP & ScrollToPlugin -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollToPlugin.min.js" integrity="sha512-kSI9CgGh60rJbNVeMJvfNX0UTKAq8LEOea/yKJQbFpIroxT7bf9/zUFXbnfsQP5F6xlOOHtCfBPgsE1ceiHnRw==" crossorigin="anonymous"></script>  
   
   <!-- ScrollMagic -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous"></script>
@@ -587,6 +590,94 @@
 
     </div>
   </section>
+
+  <!-- AWARDS -->
+  <section class="awards">
+    <div class="inner">      
+
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./images/awards_slide1.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide2.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide3.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide4.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide5.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide6.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide7.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide8.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide9.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./images/awards_slide10.jpg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="swiper-prev">
+        <div class="material-icons">arrow_back</div>
+      </div>
+      <div class="swiper-next">
+        <div class="material-icons">arrow_forward</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="inner">
+
+      <ul class="menu">
+        <li><a href="javascript:void(0)" class="green">개인정보처리방침</a></li>
+        <li><a href="javascript:void(0)">영상정보처리기기</a></li>
+        <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
+        <li><a href="javascript:void(0)">위치정보 이용약관</a></li>
+        <li><a href="javascript:void(0)">스타벅스 카드 이용약관</a></li>
+        <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>        
+      </ul>
+
+      <div class="btn-group">
+        <a href="javascript:void(0)" class="btn btn--white">찾아오시는 길</a>
+        <a href="javascript:void(0)" class="btn btn--white">신규입점제의</a>
+        <a href="javascript:void(0)" class="btn btn--white">사이트맵</a>
+      </div>
+
+      <div class="info">
+        <span>사업자</span>
+        <span>(주)스타벅스 코리아 대표이사</span>
+        <span>TEL : 02)</span>
+        <span>개인정보 책임자</span>
+      </div>
+
+      <!-- google -> html entities!!! html 특수문자 -->
+      <p class="copyright">
+        &copy; <span class="this-year"></span> Starbucks Coffee Company. All Rights Reserved.        
+      </p>
+      <img src="./images/starbucks_logo_only_text.png" alt="" class="logo" />
+
+    </div>
+  </footer>
+
+  <div id="to-top">
+    <div class="material-icons">arrow_upward</div>
+  </div>
+
+
 </body>
 
 </html>
