--- a/scss/index.html
+++ b/scss/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=
   , initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="stylesheet" href="./main.scss">
 </head>
 <body>
   <div class="container">
-    <h1>Hello!</h1>
+    <h1>Hello SCSS!</h1>
   </div>
 </body>
 </html>
