--- a/scss/index.html
+++ b/scss/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello SCSS!</h1>
+    <ul>
+      <li>
+        <div class="name">HoSeong</div>
+        <div class="age">11</div>
+      </li>
+    </ul>
   </div>
 </body>
 </html>
