--- a/scss/index.html
+++ b/scss/index.html
@@ -10,13 +10,8 @@
   <link rel="stylesheet" href="./main.scss">
 </head>
 <body>
-  <div class="container">
-    <ul>
-      <li>
-        <div class="name">HoSeong</div>
-        <div class="age">11</div>
-      </li>
-    </ul>
-  </div>
+        
+        <div class="ho"></div>
+  
 </body>
 </html>
