update scss의 함수: @mixin

--- a/scss/index.html
+++ b/scss/index.html
@@ -11,7 +11,11 @@
 </head>
 <body>
         
-        <div class="ho"></div>
+  <div class="container">
+    <div class="item">
+      Mixin
+    </div>
+  </div>
   
 </body>
 </html>
