update scss built-in color function

--- a/scss/index.html
+++ b/scss/index.html
@@ -11,11 +11,8 @@
 </head>
 <body>
         
-  <div class="container">
-    <div class="item">
-      Mixin
-    </div>
-  </div>
+  <div class="box"></div>
+  <div class="box built-in"></div>
   
 </body>
 </html>
