--- a/scss/index.html
+++ b/scss/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="./main.scss">
 </head>
 <body>
-        
+  <div class="container">
+    <h1>Hello World!</h1>
+  </div>
   <div class="box"></div>
   <div class="box built-in"></div>
   
