--- a/essential/bundler/index.html
+++ b/essential/bundler/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Reuse</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <script defer src="./main.js"></script>
   <link rel="stylesheet" href="./scss/main.scss">
+  <script defer src="./main.js"></script>
 </head>
 <body>
   <h1>Hello world</h1>
+  <img src="./images/icon.png" alt="REUSE">
   
 </body>
 </html>
