--- a/essential/bundler/index.html
+++ b/essential/bundler/index.html
@@ -7,7 +7,7 @@
   <title>Reuse</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="stylesheet" href="./scss/main.scss">
-  <script defer src="./main.js"></script>
+  <script defer src="./js/main.js"></script>
 </head>
 <body>
   <h1>Hello world</h1>
