--- a/essential/bundler/webpack-test/index.html
+++ b/essential/bundler/webpack-test/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello webpack!</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-  <script src="./js/main.js"></script>
 </head>
 <body>
   <h1>hello Webpack</h1>
+  <img src="./images/icon.png" alt="Reuse">
   
 </body>
 </html>
