Update starbucks_responsive: SCSS refactoring complete

--- a/HTML/starbucks_responsive/index.html
+++ b/HTML/starbucks_responsive/index.html
@@ -28,6 +28,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/main2.css">
+
+  <script src="https://kit.fontawesome.com/19e38f6dd7.js" crossorigin="anonymous"></script>
   
   <!-- lodash -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous"></script>
@@ -378,7 +380,8 @@
     </div>
   </header>
 
-
+  <!-- <div class="fab fa-github"></div>  git hub-->
+  
   <!-- VISUAL -->
   <section class="visual">
     <div class="inner">
