update re: layout setting

--- a/HTML/re/index.html
+++ b/HTML/re/index.html
@@ -75,7 +75,7 @@
       </nav>
   </header>
   <div class="contents">
-    <section class="youtube">
+    <!-- <section class="youtube">
       <div class="youtube__area">
         <div id="player"></div>
       </div>
@@ -146,13 +146,45 @@
           <div class="material-icons">arrow_forward</div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section class="content_profile">
+      <div class="profile left">
+        <div class="photo">
+          <div class="photo__me">
+          </div>
+        </div>
+        <div class="info">
+          <ul class="info__name">
+            <li>Hoseong Song</li>
+            <li><a href="mailto:thdghtjd115@gmail.com" target="_blank" rel="noopener noreferrer">thdghtjd115@gmail.com</a></li>
+            <li>Seoul, Republic of Korea</li>
+          </ul>
+          <ul class="info__contact">
+            <li><a href="https://github.com/hoseong511" target="_blank" rel="noopener noreferrer">Github</a></li>
+            <li><a href="https://replit.com/@hoseong511" target="_blank" rel="noopener noreferrer">repl.it</a></li>
+            <li><a href="https://codepen.io/hoseong511" target="_blank" rel="noopener noreferrer">codepen</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="profile right">
+        <div class="intro">
+          <ul class="intro_me">
+            <li>Hello I'm Hoseong</li>
+            <li>Learning FullStack..! and I like ...</li>
+            <li>lorem Ipsum is simply dummy text of the printing and typesetting industry. </li>
+          </ul>
+        </div>
+        <div class="git">
+          <div class="git-lang"></div>
+        </div>
+      </div>
+    </section> 
+    <section class="content_gitmgmt">
       <div class="git-stat"></div>
-      <div class="git-lang"></div>
     </section>
-    <section class="content_gitmgmt"></section>
-    <section class="content_project">최신 프로젝트가 위로</section> 
+    <section class="content_project">
+
+    </section> 
     <section class="content_learned"></section>
     <section class="content_contact"></section>
   </div>
