--- a/HTML/re/index.html
+++ b/HTML/re/index.html
@@ -36,7 +36,7 @@
   <header>
     <div class="inner">
       <a class="logo" href="https://github.com/hoseong511" target="_blank" rel="noopener noreferrer">
-        <img src="./src/images/icon.png" alt="logo_reuse">
+        <img src="./images/icon.png" alt="logo_reuse">
       </a>
       <div class="sub-menu">
         <ul class="menu">
