--- a/CSS/css_study/index1.html
+++ b/CSS/css_study/index1.html
@@ -36,10 +36,56 @@
     <div class="item">2</div>
     <div class="item">3</div>
   </div>
-  <div class="grid-container">
+  <div class="grid-container2">
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+  </div>
+  <div class="grid-container3">
+    <div class="item">HEADER</div>
+    <div class="item">MAIN</div>
+    <div class="item">ASIDE</div>
+    <div class="item">FOOTER</div>
+  </div>
+  <div class="grid-container4">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+  </div>
+  <div class="grid-auto">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+  </div>
+  <div class="grid-line">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+  </div>
+  <div class="grid-repeat">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+  </div>
+  <div class="grid-area">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+  </div>
+  <div class="grid-template">
+    <header>HEADER</header>
+    <main>MAIN</main>
+    <aside>ASIDE</aside>
+    <footer>FOOTER</footer>
   </div>
 </body>
 </html>
