Update CSS: grid, grid-template, grid -> 단축속성, align-content, justify-content, order, z-index, min-content, word-break, auto-fill

--- a/CSS/css_study/index1.html
+++ b/CSS/css_study/index1.html
@@ -87,5 +87,53 @@
     <aside>ASIDE</aside>
     <footer>FOOTER</footer>
   </div>
+  <div class="align-container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+  </div>
+  <div class="order-container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+  </div>
+  <div class="z-container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+  </div>
+  <div class="fit-container">
+    <div class="item">Hello</div>
+    <div class="item">orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+  </div>
+  <div class="fr-container">
+    <div class="item">애국가는 대한민국의 국가이다. 1919년 안창호에 의해 대한민국 임시 정부에서 스코틀랜드 민요인 </div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+  </div>
+  <div class="auto-fill-container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
+    <div class="item">9</div>
+    <div class="item">10</div>
+  </div>
 </body>
 </html>
