--- a/CSS/css_layout/challenge/1day/index.html
+++ b/CSS/css_layout/challenge/1day/index.html
@@ -32,19 +32,15 @@
       </div>
       <div class="main">
         <div class="container">
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-        </div>
-        <div class="container">
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-        </div>
-        <div class="container">
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
+          <div class="item i1"></div>
+          <div class="item i1"></div>
+          <div class="item i1"></div>
+          <div class="item i2"></div>
+          <div class="item i2"></div>
+          <div class="item i2"></div>
+          <div class="item i3"></div>
+          <div class="item i3"></div>
+          <div class="item i3"></div>
         </div>
     </div>
     </div>
