Update css_layout: challenge day8 v.2

--- a/CSS/css_layout/challenge/day8/index.html
+++ b/CSS/css_layout/challenge/day8/index.html
@@ -13,16 +13,18 @@
       <div class="main_nav">
         <ul>
           <li>LOCATIONS</li>
+          <li>✦</li>
           <li>MENU</li>
+          <li>✦</li>
           <li>SHOP</li>
         </ul>
       </div>
-      <div class="newsandsns">
-        <div class="news">SPICY NEWSLETTER</div>
-        <div class="sns">
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-instagram"></i>
-        </div>
+      <div class="news">
+        <p>SPICY NEWSLETTER</p>
+      </div>
+      <div class="sns">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
       </div>
       <div class="order">
         ORDER T-A
