--- a/CSS/css_layout/challenge/day9/index.html
+++ b/CSS/css_layout/challenge/day9/index.html
@@ -88,12 +88,12 @@
     <main id="container">
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">RED</div>
+          <div class="short">#E20000</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_AZD8S3wxx8U4fVQVBF3SgqQ87dHJcqE4JA&usqp=CAU" alt="">
           </div>
         </div>
         <div class="more">
@@ -103,12 +103,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">GREEN</div>
+          <div class="short">#00F200</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://erc.europa.eu/sites/default/files/styles/stories_detail_page/public/stories/images/GettyImages-181877763.jpg?itok=8sUVoeQg" alt="">
           </div>
         </div>
         <div class="more">
