Update css_layout: challenge day9 v.3

--- a/CSS/css_layout/challenge/day9/index.html
+++ b/CSS/css_layout/challenge/day9/index.html
@@ -23,13 +23,9 @@
           <span>Programme</span>
           <div class="programclick">
             <ul>
-              <li>
-                <div class="frame">
-                  <img src="" alt="">
-                </div>
-              </li>
-              <li>2</li>
-              <li>3</li>
+              <li>algorithm</li>
+              <li>dataStructure</li>
+              <li>graph</li>
             </ul>
           </div>
         </li>
@@ -37,9 +33,9 @@
           <span>Themes</span>
           <div class="themeclick">
             <ul>
-              <li>11</li>
-              <li>22</li>
-              <li>33</li>
+              <li>color</li>
+              <li>study</li>
+              <li>street</li>
             </ul>
           </div>
         </li>
@@ -47,9 +43,9 @@
           <span>Practice</span>
           <div class="practiceclick">
             <ul>
-              <li>aa</li>
-              <li>bb</li>
-              <li>cc</li>
+              <li>very</li>
+              <li>hard</li>
+              <li>more</li>
             </ul>
           </div>
         </li>
@@ -57,9 +53,9 @@
           <span>Students</span>
           <div class="studentclick">
             <ul>
-              <li>a</li>
-              <li>b</li>
-              <li>c</li>
+              <li>ho</li>
+              <li>ya</li>
+              <li>ho</li>
             </ul>
           </div>
         </li>
@@ -93,7 +89,7 @@
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_AZD8S3wxx8U4fVQVBF3SgqQ87dHJcqE4JA&usqp=CAU" alt="">
+            <img src="https://images.pexels.com/photos/2899682/pexels-photo-2899682.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           </div>
         </div>
         <div class="more">
@@ -108,7 +104,7 @@
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="https://erc.europa.eu/sites/default/files/styles/stories_detail_page/public/stories/images/GettyImages-181877763.jpg?itok=8sUVoeQg" alt="">
+            <img src="https://images.pexels.com/photos/66869/green-leaf-natural-wallpaper-royalty-free-66869.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="">
           </div>
         </div>
         <div class="more">
@@ -119,12 +115,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">BLACK</div>
+          <div class="short">#000000</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/821644/pexels-photo-821644.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           </div>
         </div>
         <div class="more">
@@ -135,12 +131,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">YELLOW</div>
+          <div class="short">#F2C230</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/5563381/pexels-photo-5563381.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           </div>
         </div>
         <div class="more">
@@ -151,12 +147,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">ROYAL BLUE</div>
+          <div class="short">#0F4982</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/8386430/pexels-photo-8386430.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           </div>
         </div>
         <div class="more">
@@ -167,12 +163,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">YELLOW GREEN</div>
+          <div class="short">#C8F205</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/68676/tree-field-oilseed-rape-summer-68676.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           </div>
         </div>
         <div class="more">
@@ -183,12 +179,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">ORANGE</div>
+          <div class="short">#F67C07</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/1558916/pexels-photo-1558916.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           </div>
         </div>
         <div class="more">
@@ -199,12 +195,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">GRAY</div>
+          <div class="short">#3C4043</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/3816393/pexels-photo-3816393.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           </div>
         </div>
         <div class="more">
@@ -215,12 +211,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">SAND</div>
+          <div class="short">#C39A78</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/5344040/pexels-photo-5344040.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
           </div>
         </div>
         <div class="more">
@@ -231,12 +227,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">WHITE</div>
+          <div class="short">#FFFFFF</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/296234/pexels-photo-296234.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           </div>
         </div>
         <div class="more">
@@ -247,12 +243,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">SALMON</div>
+          <div class="short">#F4C2C0</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/7065187/pexels-photo-7065187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           </div>
         </div>
         <div class="more">
@@ -263,12 +259,12 @@
       </div>
       <div class="item">
         <div class="title">
-          <div class="name">11</div>
-          <div class="short">22</div>
+          <div class="name">BLUE</div>
+          <div class="short">#005FC3</div>
         </div>
         <div class="viewimage">
           <div class="frame">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/53135/hydrangea-blossom-bloom-flower-53135.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
           </div>
         </div>
         <div class="more">
