--- a/CSS/css_layout/challenge/day11/index.html
+++ b/CSS/css_layout/challenge/day11/index.html
@@ -63,7 +63,17 @@
            a diverse range of industries.
         </p>
       </div>
-      <div class="contents1"></div>
+      <div class="contents1">
+        <div class="left"></div>
+        <div class="upright"></div>
+        <div class="downright">
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+        </div>
+      </div>
       <div class="services">
         <div class="short">SERVICES</div>
         <div class="title">
@@ -71,7 +81,12 @@
           <span>under one roof.</span>
         </div>
       </div>
-      <div class="contents2"></div>
+      <div class="contents2">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
     </main>
   </body>
 </html>
