Update css_layout: horror v 0.1.2 , added dummy data

--- a/CSS/css_layout/clone/besthorrorscenes/index.html
+++ b/CSS/css_layout/clone/besthorrorscenes/index.html
@@ -52,6 +52,222 @@
           </div>
         </footer>
       </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
+      <article>
+        <header>
+          <h2>56. THE VANISHING (1988)</h2>
+          <div class="director">Directed by George Sluizer</div>
+        </header>
+        <div class="content">
+          <div class="content_img"></div>
+        </div>
+        <footer>
+          <div class="rating">
+            <span>
+              Do you agree?
+            </span>
+            <div class="up">
+              <div class="material-icons">thumb_up_alt</div>
+              <span class="up_num">0</span>
+            </div>
+            <div class="down">
+              <div class="material-icons">thumb_down_alt</div>
+              <div class="down_num">0</div>
+            </div>
+          </div>
+        </footer>
+      </article>
     </section>
     <footer class="main_footer">
       <div class="youtube">YouTube</div>
