--- a/CSS/css_layout/clone/besthorrorscenes/index.html
+++ b/CSS/css_layout/clone/besthorrorscenes/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -270,8 +271,14 @@
       </article>
     </section>
     <footer class="main_footer">
-      <div class="youtube">YouTube</div>
-      <div class="Follow">Follow</div>
+      <div class="youtube">
+        <i class="fab fa-youtube"></i>
+        YouTube
+      </div>
+      <div class="Follow">
+        <i class="fab fa-twitter"></i>
+        Follow
+      </div>
     </footer>
   </main>
 </body>
